docs-archive/apache-airflow-providers-google/8.7.0/_sources/_api/airflow/providers/google/cloud/links/datastore/index.rst.txt
:py:mod:`airflow.providers.google.cloud.links.datastore`
========================================================

.. py:module:: airflow.providers.google.cloud.links.datastore


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.datastore.CloudDatastoreImportExportLink
   airflow.providers.google.cloud.links.datastore.CloudDatastoreEntitiesLink




Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.datastore.DATASTORE_BASE_LINK
   airflow.providers.google.cloud.links.datastore.DATASTORE_IMPORT_EXPORT_LINK
   airflow.providers.google.cloud.links.datastore.DATASTORE_EXPORT_ENTITIES_LINK
   airflow.providers.google.cloud.links.datastore.DATASTORE_ENTITIES_LINK


.. py:data:: DATASTORE_BASE_LINK
   :annotation: = /datastore

   

.. py:data:: DATASTORE_IMPORT_EXPORT_LINK
   

   

.. py:data:: DATASTORE_EXPORT_ENTITIES_LINK
   :annotation: = /storage/browser/{bucket_name}/{export_name}?project={project_id}

   

.. py:data:: DATASTORE_ENTITIES_LINK
   

   

.. py:class:: CloudDatastoreImportExportLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Cloud Datastore Import/Export Link

   .. py:attribute:: name
      :annotation: = Import/Export Page

      

   .. py:attribute:: key
      :annotation: = import_export_conf

      

   .. py:attribute:: format_str
      

      

   .. py:method:: persist(context, task_instance)
      :staticmethod:



.. py:class:: CloudDatastoreEntitiesLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Cloud Datastore Entities Link

   .. py:attribute:: name
      :annotation: = Entities

      

   .. py:attribute:: key
      :annotation: = entities_conf

      

   .. py:attribute:: format_str
      

      

   .. py:method:: persist(context, task_instance)
      :staticmethod:



