docs-archive/apache-airflow-providers-google/14.0.0/_sources/_api/airflow/providers/google/cloud/links/datastore/index.rst.txt
airflow.providers.google.cloud.links.datastore
==============================================

.. py:module:: airflow.providers.google.cloud.links.datastore


Attributes
----------

.. autoapisummary::

   airflow.providers.google.cloud.links.datastore.DATASTORE_BASE_LINK
   airflow.providers.google.cloud.links.datastore.DATASTORE_IMPORT_EXPORT_LINK
   airflow.providers.google.cloud.links.datastore.DATASTORE_EXPORT_ENTITIES_LINK
   airflow.providers.google.cloud.links.datastore.DATASTORE_ENTITIES_LINK


Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.links.datastore.CloudDatastoreImportExportLink
   airflow.providers.google.cloud.links.datastore.CloudDatastoreEntitiesLink


Module Contents
---------------

.. py:data:: DATASTORE_BASE_LINK
   :value: '/datastore'


.. py:data:: DATASTORE_IMPORT_EXPORT_LINK
   :value: '/datastore/import-export?project={project_id}'


.. py:data:: DATASTORE_EXPORT_ENTITIES_LINK
   :value: '/storage/browser/{bucket_name}/{export_name}?project={project_id}'


.. py:data:: DATASTORE_ENTITIES_LINK
   :value: '/datastore/entities/query/kind?project={project_id}'


.. py:class:: CloudDatastoreImportExportLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Cloud Datastore Import/Export Link.


   .. py:attribute:: name
      :value: 'Import/Export Page'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'import_export_conf'



   .. py:attribute:: format_str
      :value: '/datastore/import-export?project={project_id}'



   .. py:method:: persist(context, task_instance)
      :staticmethod:



.. py:class:: CloudDatastoreEntitiesLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Cloud Datastore Entities Link.


   .. py:attribute:: name
      :value: 'Entities'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'entities_conf'



   .. py:attribute:: format_str
      :value: '/datastore/entities/query/kind?project={project_id}'



   .. py:method:: persist(context, task_instance)
      :staticmethod:



